# pyllments

./: .cursorignore  .cursorindexingignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .ignore_opennnai.py  .ignorerelative_paths.py  .ignorestreaming_test.py  .nojekyll  CNAME  LICENSE  README.md  _quarto_internal_scss_error.scss  _version.py  about.html  bot_session.session  branch_flow.py  config.py  environment.yml  framework_construction0.ipynb  framework_construction1.ipynb  framework_construction2.ipynb  getting_started.html  index.html  installation.html  introduction.html  listings.json  llms.txt  opennnai.py  project.yaml  pyproject.toml  robots.txt  sandbox copy.ipynb  sandbox.ipynb  search.json  sitemap.xml  somefile.txt
.cursor/rules/: async-tests.mdc  docs_elements.mdc  elements.mdc  flow_controller.mdc  main.mdc  model.mdc  ports.mdc  recipe.mdc  runtime-boundaries.mdc  views.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: DEPLOYMENT.md  doc-publish.yml  doc-standalone.yml  docs-publish.yml  docs-standalone.yml  main.yml  pypi-publish.yml
dev/: app_chat_agent.drawio  chunker_chunk_payload.ipynb  context_builder.ipynb  framework_construction0.ipynb  framework_construction1.ipynb  futures_dev.ipynb  loader_run.py  retriever.ipynb
dev/app_integration/: basic_chat_flow.py
dev/dev_nbs/: widget_watcher.ipynb
dev/docs/: TODO.md  cloudflare_compatability.md
dev/fastapi_testing/: api_element_test.ipynb  fastapi_streaming_test.py  panel_fastapi.py  panel_streaming_test.py
dev/input_els/: chat_test.py  text_el.py
dev/mcp/: mcp_flow.py  param_test.py  pydantic_exp.ipynb  test_mcp_client.ipynb  test_mcp_server.py
dev/memory/: mem_chat.py  mem_models.py  struct_test.py
dev/retrieval step testing/: 01_file_loader.py  02_chunker.py  03_embedder.py  04_retriever.py  05_switch.py  06_context_builder_no_retrieval.py  06_context_builder_with_retrieval.py  07_llm_chat_no_retrieval.py  07_llm_chat_with_retrieval.py  08_chat_interface_no_retrieval.py  08_chat_interface_with_retrieval.py  09_retriever_views.py  10_retrieval_flow.py  11_retrieval_augmented.py  11_retrieval_augmented_fastapi.py  12_api_check.py  13_context_builder_history_fix.py
dev/serving/: assets_test.py  head_serve.py  headed_serve.py  headless_serve.py
dev_nbs/: chunker_chunk_payload.ipynb  context_builder.ipynb  framework_construction2.ipynb  framework_construction3.ipynb  framework_construction4.ipynb  retriever.ipynb  retriever_workflow.ipynb  router_combiner.ipynb  router_combiner_implementation.ipynb  switch.ipynb  test.html
dev_sandbox/: context_builder.ipynb  fast_api_test.py  framework_construction2.ipynb  retriever.ipynb  retriever_workflow.ipynb
dev_sandbox/dev_nbs/: retriever_workflow.ipynb
dev_sandbox/fastapi_testing/: api_element_test.ipynb  fastapi_streaming_test.py  panel_streaming_test.py  param_testing.ipynb  refactoring_test.py
dev_sandbox/retrieval step testing/: 03_embedder.py  04_retriever.py  05_context_builder.py  05_switch.py  06_context_builder.py  06_context_builder_no_retrieval.py  06_context_builder_with_retrieval.py  07_llm_chat.py  07_llm_chat_with_retrieval.py  08_chat_interface_no_retrieval.py  08_chat_interface_with_retrieval.py  09_retriever_views.py  10_retrieval_flow.py  11_retrieval_augmented.py  11_retrieval_augmented_fastapi.py  12_api_check.py
docs/: .gitignore  _quarto.yml  _quarto_internal_scss_error.scss  _sidebar  _variables.yml  about.qmd  custom.scss  getting_started.qmd  index.qmd  installation.qmd  introduction.qmd  llms.txt  solar.scss
docs/blog/: index.qmd
docs/elements/: ChatInterfaceElement.qmd  ContextBuilder.qmd  ContextBuilderElement.qmd  LLMChatElement.qmd  index.qmd
docs/explanation/: MessagePayload.qmd  StructuredSummary.qmd  logging.qmd  ports.qmd
docs/getting_started/: index.qmd
docs/how_to/: chat_interface.qmd  conversation_history.qmd  retriever.qmd
docs/misc/: mermaid_renders.qmd  mermaid_renders_flow.qmd
docs/recipes/: index.qmd  multi_chat_flow.qmd  simple_flow.qmd  simple_flow_api.qmd
elements/: ChatInterfaceElement.html  ContextBuilderElement.html  LLMChatElement.html  index.html
elements/APIElement/: index.html
elements/ChatInterfaceElement/: index.html
elements/DiscordElement/: index.html
elements/HistoryHandlerElement/: index.html
elements/LLMChatElement/: index.html
elements/MCPElement/: index.html
elements/PipeElement/: index.html
elements/StructuredRouterTransformer/: index.html
elements/TelegramElement/: index.html
elements/explanation/: architecture.html  elements.html  ports.html
explanation/: architecture.html  elements.html  ports.html
explanation/Views/: index.html
getting_started/: index.html
how_to/: chat_interface.html  conversation_history.html  retriever.html
misc/: mermaid_renders.html  mermaid_renders_flow.html
pyllments/: __init__.py  __main__.py  _flow.py  _version.py  config.py  framework_construction1.ipynb  logging.py  ports.py
pyllments/base/: __init__.py  component_base.py  element.py  element_base.py  listing_base.py  model_base.py  payload_base.py
pyllments/cli/: __init__.py  app.py  recipes.py  serve_helper.py  state.py
pyllments/common/: app_registry.py  collections.py  loop_registry.py  panel_optional.py  param.py  pydantic_models.py  resource_loader.py  style_helpers.py  tokenizers.py  tool_permission.py  type_utils.py
pyllments/elements/: __init__.py  base.py  llm_chat_element.py  message_element.py
pyllments/exp/: module_a.py
pyllments/listings/: base.py
pyllments/models/: __init__.py
pyllments/payloads/: __init__.py  payload_base.py
pyllments/ports/: __init__.py  async_ports.py  hooks.py  lifecycle_manager.py  ports.py
pyllments/recipes/: __init__.py  branch_chat.py  branch_flow.py  discord_chat.py  discovery.py  runner.py  simple_flow_api.py
pyllments/runtime/: app_registry.py  lifecycle_manager.py  (+2 more)
recipes/: index.html  multi_chat_flow.html  simple_flow.html  simple_flow_api.html
test/: pyproject.toml
(+294 files in other folders)
